# agent-tutorial

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/superpowers/plans/: 2026-03-10-youtube-shorts-agent.md
docs/superpowers/specs/: 2026-03-10-youtube-shorts-agent-design.md
src/: agents.py  app.py  deps.py  models.py  pipeline.py  tools.py
tests/: conftest.py  test_deps.py  test_models.py  test_pipeline.py  test_tools.py
